crates/graphite/tests/ui/graph_duplicate_node_key.stderr
error: 識別子 `tanaka` は既に宣言されています
  --> tests/ui/graph_duplicate_node_key.rs:41:9
   |
41 |         tanaka = Employee { name: "田中2".into(), id: 2 },
   |         ^^^^^^

error: 最初の宣言はこちら
  --> tests/ui/graph_duplicate_node_key.rs:39:9
   |
39 |         tanaka = Employee { name: "田中".into(), id: 1 },
   |         ^^^^^^
